# scGPT_BoneMarrow_ImmuneAtlas

./: README.md  pyproject.toml
src/: run_checkpoint_benchmark.py  run_scgpt_atlas.py  run_scgpt_celltype_annotation_v2.py  run_scgpt_full_atlas_pipeline.py
src/scgpt/: __init__.py
src/scgpt/analysis/: __init__.py
src/scgpt/cli/: __init__.py  __main__.py  main.py
src/scgpt/core/: __init__.py
src/scgpt/pipelines/: __init__.py  annotate.py  benchmark.py  embed.py  full_pipeline.py
