[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scgpt-bone-marrow-immune-atlas"
version = "0.1.0"
description = "scGPT embedding, benchmarking, and annotation workflows for a 3.04-million-cell bone marrow immune atlas."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Joshua Rivera"}
]

[project.urls]
Repository = "https://github.com/jriv724/scGPT_BoneMarrow_ImmuneAtlas"

[project.scripts]
scgpt-atlas = "scgpt.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
